# wasm-bindgen-service-worker

./: CHANGELOG.md  Cargo.toml  README.md  cog.toml  flake.nix
.github/workflows/: release.yaml
crates/loader/: Cargo.toml
crates/loader/src/: lib.rs
crates/service-worker/: Cargo.toml
crates/service-worker/src/: error.rs  lib.rs
crates/worker/: Cargo.toml
crates/worker/src/: error.rs  lib.rs
flake-parts/: cargo.nix  pre-commit.nix  rust-toolchain.nix  shells.nix
