[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.68"
js-sys = "0.3.61"
# reqwest = { version = "0.11.12", features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0.38"
tracing = "0.1.37"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"

[profile.release]
opt-level = 2 # fast and small wasm
