[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.1"

[workspace.dependencies]
anyhow = "1.0.68"
js-sys = "0.3.68"
serde_json = "1"
thiserror = "1"
tracing = "0.1"
wasm-bindgen = "=0.2.91"
wasm-bindgen-futures = "0.4.41"

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1"
features = ["full"]

[profile.release]
opt-level = 2

[profile.release.package]
