[package]
name = "service-worker-loader"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }

[dependencies.web-sys]
version = "0.3.4"
features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Location",
    "Navigator",
    "Node",
    "Window",
    "RegistrationOptions",
    "ServiceWorkerGlobalScope",
    "ServiceWorkerRegistration",
    "ServiceWorkerState",
    "ServiceWorker",
    "ServiceWorkerContainer",
    "Url",
]
