[package]
name = "service-worker"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
js-sys = { workspace = true }
# serde.workspace = true
# serde_json = "1.0.87"
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
