[package]
name = "service-worker"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
js-sys = { workspace = true }
# serde.workspace = true
# serde_json = "1.0.87"
thiserror.workspace = true
tracing.workspace = true
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[dependencies.web-sys]
version = "0.3.4"
features = [
    "console",
    "Clients",
    "ExtendableEvent",
    "ExtendableMessageEvent",
    "Location",
    "Navigator",
    "Node",
    "Window",
    "RegistrationOptions",
    "ServiceWorkerGlobalScope",
    "ServiceWorkerRegistration",
    "ServiceWorkerState",
    "ServiceWorker",
    "ServiceWorkerContainer",
    "Url",
]
